ch07/order-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: order-vs
spec:
  hosts:
  - order-svc
  http:
    - route:
        - destination:
            host: order-svc
            subset: v1
          weight: 50
        - destination:
            host: order-svc
            subset: v2
          weight: 50
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: order-dr
spec:
  host: order-svc
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
